--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
+//    虚拟摇杆
+    implementation 'com.github.GcsSloop:Rocker:v1.1.1'
 }
